<!--
  ~ /*
  ~  * Copyright (C) 2020 Viktor Bukovets
  ~  *
  ~  * This file is part of LangLearnApp.
  ~  *
  ~  * LangLearnApp is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * LangLearnApp is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<resources>
<!--    Values-->
    <string name="default_export_path" translatable="false">Android/data/com.redbu11.langlearnapp/files</string>

<!--    Texts-->
    <string name="app_name" translatable="false">LangLearn</string>

    <string name="error_occurred">Error occurred</string>

    <string name="title_features">#TODO</string>
    <string name="title_dashboard">Phrases</string>
    <string name="title_settings">Settings</string>

<!--    Dialogs-->
    <string name="dialog_title_important_notice">Important notice</string>

    <string name="dialog_phrase_persistence_message">Because the application stores your data only locally, your phrases will be permanently deleted after uninstalling the application or clearing it\'s data.
        \n
        \n
        To avoid losing your phrases, you may export them to a .csv file from the \"%s\" menu, which can be used to restore your phrases.
    </string>
    <string name="dialog_phrase_persistence_confirmation_message">I understand, don\'t show again</string>
    <string name="dialog_phrase_persistence_btn_positive">OK</string>

    <string name="dialog_about_the_app_title">About the app</string>
    <string name="dialog_about_the_app_message">
        Copyright © 2020 Viktor Bukovets
        \n
        \n
        The app is created for the purpose of helping people learn other languages by providing a dedicated way of storing foreign phrases.
        \n
        Can be useful if someone tells you a phrase/word, but you don\'t have a quick or convenient way of writing it down.
        \n
        I made the app mostly for myself, because I needed a convenient way of storing phrases, when playing VRChat (lol).
        \n
        \n
        The app is also open source, and I\'d be happy if you visit my github page and support me there (I would love to hear about my code quality and/or receive advices, and stars would always be nice :P)
        \n
        \n
        Thank you for using the app.
    </string>

    <string name="dialog_about_the_app_btn_positive">OK</string>

    <string name="dialog_confirmation_default_message">Are you sure?</string>
    <string name="dialog_confirmation_default_btn_positive">Yes</string>
    <string name="dialog_confirmation_default_btn_negative">Cancel</string>

    <string name="dialog_erase_db_message">Are you sure you want to delete all phrases permanently?</string>
    <string name="dialog_erase_db_btn_positive">Delete</string>
    <string name="dialog_erase_db_btn_negative">Cancel</string>

    <string name="dialog_export_phrases_message">Please select a location for the .csv file.
        \n
        \n
        Note: Please make sure to save the file outside of \"Android/data\" to avoid losing the file after uninstalling the application.
    </string>
    <string name="dialog_export_phrases_btn_positive">Export</string>
    <string name="dialog_export_phrases_btn_negative">Cancel</string>

    <string name="dialog_import_phrases_message">You need to locate a .csv file with phrases on your storage</string>
    <string name="dialog_import_phrases_btn_positive">Import</string>
    <string name="dialog_import_phrases_btn_negative">Cancel</string>

    <string name="dialog_update_phrase_confirmation_message">This phrase\'s information will be updated. Continue?</string>
    <string name="dialog_update_phrase_confirmation_btn_positive">Update</string>
    <string name="dialog_update_phrase_confirmation_btn_negative">Cancel</string>

    <string name="dialog_delete_phrase_confirmation_message">This phrase will be deleted forever. Are you sure?</string>
    <string name="dialog_delete_phrase_confirmation_btn_positive">Delete</string>
    <string name="dialog_delete_phrase_confirmation_btn_negative">Cancel</string>

<!--    Dashboard-->

    <string name="dashboard_search_query_desc">Filter: %s</string>
    <string name="dashboard_search_query_btn_clear">CLEAR</string>

    <string name="dashboard_phrase_manipulation_title_create">Create new phrase</string>
    <string name="dashboard_phrase_manipulation_title_update">Update the phrase</string>

    <string name="dashboard_input_title_phrase_language">From:</string>
    <string name="dashboard_input_title_phrase_text">Phrase:</string>
    <string name="dashboard_input_title_translation_language">To:</string>
    <string name="dashboard_input_title_translation_text">Translation:</string>
    <string name="dashboard_input_title_notes">Notes:</string>

    <string name="dashboard_input_hint_phrase_language">Language</string>
    <string name="dashboard_input_hint_phrase_text">Phrase text</string>
    <string name="dashboard_input_hint_translation_language">Language</string>
    <string name="dashboard_input_hint_translation_text">Translation text</string>
    <string name="dashboard_input_hint_notes">Notes</string>

    <string name="dashboard_btn_save">Save</string>
    <string name="dashboard_btn_clear_all">Clear All</string>
    <string name="dashboard_btn_update">Update</string>
    <string name="dashboard_btn_delete">Delete</string>
    <string name="dashboard_btn_share">Share</string>

    <string name="dashboard_error_enter_phrase_language">Please enter phrase language</string>
    <string name="dashboard_error_enter_phrase_text">Please enter phrase text</string>
    <string name="dashboard_error_enter_translation_language">Please enter translation language</string>
    <string name="dashboard_error_enter_translation_text">Please enter translation text</string>

    <string name="dashboard_phrase_insert_success">Phrase inserted successfully</string>
    <string name="dashboard_phrase_update_success">phrase(s) updated successfully</string>
    <string name="dashboard_phrase_delete_one_phrase_success">Phrase deleted successfully</string>
    <string name="dashboard_phrase_delete_success">phrase(s) deleted successfully</string>

    <string name="dashboard_phrase_deleted_undo_message">Phrase removed</string>
    <string name="dashboard_phrase_deleted_undo_btn">UNDO</string>

<!--    Settings-->
    <string name="settings_category_phrases">Phrases</string>
    <string name="settings_pref_delete_all_name">Delete all</string>
    <string name="settings_pref_delete_all_desc">Delete all phrases</string>
    <string name="settings_pref_export_name">Export phrases</string>
    <string name="settings_pref_export_desc">Export all phrases to storage</string>
    <string name="settings_pref_import_name">Import phrases</string>
    <string name="settings_pref_import_desc">Import phrases from storage</string>

    <string name="settings_category_social">Social</string>

    <string name="settings_category_other">Other</string>
    <string name="settings_pref_about_name">About</string>
    <string name="settings_pref_about_desc">About the app</string>

    <string name="settings_pref_github_page_name">GitHub page</string>
    <string name="settings_pref_github_page_desc">Visit the app\'s github page</string>

    <string name="settings_pref_credits_name">Credits</string>
    <string name="settings_pref_credits_desc">Credits and attribution</string>

    <string name="settings_view_filename">View %s</string>
    <string name="settings_pick_csv_intent">Pick the database .csv</string>

    <string name="settings_export_successful">Export successful</string>
    <string name="settings_import_successful">Import successful</string>

<!--    Phrase ListItem-->
    <string name="phrase_listItem_phraseLang_title">Phrase (%s):</string>
    <string name="phrase_listItem_translationLang_title">Translation (%s):</string>
    <string name="phrase_listItem_notes_title">Notes:</string>
</resources>
