<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (C) 2020 Viktor Bukovets
  ~  *
  ~  * This file is part of LangLearnApp.
  ~  *
  ~  * LangLearnApp is free software: you can redistribute it and/or modify
  ~  * it under the terms of the GNU General Public License as published by
  ~  * the Free Software Foundation, either version 3 of the License, or
  ~  * (at your option) any later version.
  ~  *
  ~  * LangLearnApp is distributed in the hope that it will be useful,
  ~  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  * GNU General Public License for more details.
  ~  *
  ~  * You should have received a copy of the GNU General Public License
  ~  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  */
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard"
    >

    <fragment
        android:id="@+id/navigation_features"
        android:name="com.redbu11.langlearnapp.ui.fragments.features.FeaturesFragment"
        android:label="@string/title_features"
        tools:layout="@layout/fragment_features" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.redbu11.langlearnapp.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.redbu11.langlearnapp.ui.fragments.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/settings_pref"
        />
</navigation>
